deploy: e87f2b103f3db330b7b718d53bfdb3f9c70a2259

--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
-<!DOCTYPE HTML>
 <html  class="page" lang="de">
    <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="mobile-web-app-capable" content="yes">
-      <meta name="apple-mobile-web-app-capable" content="yes">
-      <meta name="apple-mobile-web-app-title" content="OFM">
-      <meta name="msapplication-TileColor" content="#ffffff">
-      <meta name="msapplication-TileImage" content="images/logo.png">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="None" type="image/ico" href="images/favicons/favicon.ico">
-      <link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png">
-      <link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png">
-      <link rel="icon" type="image/png" href="images/favicons/favicon-64x64.png">
-      <link rel="icon" type="image/png" href="images/favicons/favicon-96x96.png">
-      <link rel="icon" type="image/png" href="images/favicons/favicon-180x180.png">
-      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-57x57.png">
-      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-60x60.png">
-      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-72x72.png">
-      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-76x76.png">
-      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-114x114.png">
-      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-120x120.png">
-      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-144x144.png">
-      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-152x152.png">
-      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-167x167.png">
-      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-180x180.png">
-      <link rel="None" type="image/png" href="images/favicons/mstile-70x70.png">
-      <link rel="None" type="image/png" href="images/favicons/mstile-270x270.png">
-      <link rel="None" type="image/png" href="images/favicons/mstile-310x310.png">
-      <link rel="None" type="image/png" href="images/favicons/mstile-310x150.png">
-      <link rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
-      <link rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
-      <link rel="profile" href="http://gmpg.org/xfn/11">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
+      <meta name="mobile-web-app-capable" content="yes"></meta>
+      <meta name="apple-mobile-web-app-capable" content="yes"></meta>
+      <meta name="apple-mobile-web-app-title" content="OFM"></meta>
+      <meta name="msapplication-TileColor" content="#ffffff"></meta>
+      <meta name="msapplication-TileImage" content="images/logo.png"></meta>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+      <link rel="None" type="image/ico" href="images/favicons/favicon.ico"></link>
+      <link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png"></link>
+      <link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png"></link>
+      <link rel="icon" type="image/png" href="images/favicons/favicon-64x64.png"></link>
+      <link rel="icon" type="image/png" href="images/favicons/favicon-96x96.png"></link>
+      <link rel="icon" type="image/png" href="images/favicons/favicon-180x180.png"></link>
+      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-57x57.png"></link>
+      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-60x60.png"></link>
+      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-72x72.png"></link>
+      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-76x76.png"></link>
+      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-114x114.png"></link>
+      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-120x120.png"></link>
+      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-144x144.png"></link>
+      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-152x152.png"></link>
+      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-167x167.png"></link>
+      <link rel="apple-touch-icon" type="image/png" href="images/favicons/apple-touch-icon-180x180.png"></link>
+      <link rel="None" type="image/png" href="images/favicons/mstile-70x70.png"></link>
+      <link rel="None" type="image/png" href="images/favicons/mstile-270x270.png"></link>
+      <link rel="None" type="image/png" href="images/favicons/mstile-310x310.png"></link>
+      <link rel="None" type="image/png" href="images/favicons/mstile-310x150.png"></link>
+      <link rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png"></link>
+      <link rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any"></link>
+      <link rel="profile" href="http://gmpg.org/xfn/11"></link>
       <title>OFM</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-      <link rel="stylesheet" href="css/style.css" type="text/css">
-      <link rel="stylesheet" href="css/micro-editor.css" type="text/css"><script src="https://cdn.jsdelivr.net/npm/i18next@21.6.10/i18next.min.js"></script><script src="https://cdn.jsdelivr.net/npm/jquery-i18next@1.2.1/jquery-i18next.min.js"></script><script src="https://cdn.jsdelivr.net/npm/i18next-browser-languagedetector@6.1.3/i18nextBrowserLanguageDetector.min.js"></script><script src="https://cdn.jsdelivr.net/npm/i18next-http-backend@1.3.2/i18nextHttpBackend.min.js"></script><link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""><script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script><link href="https://unpkg.com/tabulator-tables@5.5.2/dist/css/tabulator.min.css" rel="stylesheet">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"></link>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"></link>
+      <link rel="stylesheet" href="css/style.css" type="text/css"></link>
+      <link rel="stylesheet" href="css/micro-editor.css" type="text/css"></link><script src="https://cdn.jsdelivr.net/npm/i18next@21.6.10/i18next.min.js"></script><script src="https://cdn.jsdelivr.net/npm/jquery-i18next@1.2.1/jquery-i18next.min.js"></script><script src="https://cdn.jsdelivr.net/npm/i18next-browser-languagedetector@6.1.3/i18nextBrowserLanguageDetector.min.js"></script><script src="https://cdn.jsdelivr.net/npm/i18next-http-backend@1.3.2/i18nextHttpBackend.min.js"></script><link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""></link><script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script><link href="https://unpkg.com/tabulator-tables@5.5.2/dist/css/tabulator.min.css" rel="stylesheet"></link>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
    </head>
    <body class="flex-column">
       <div class="wrapper-navbar sticky-top hide-reading" id="wrapper-navbar">
@@ -64,7 +63,7 @@
          </nav>
       </div>
       <main class="flex-grow-1 flex-shrink-1 bg">
-         <div class="row pad"></div>
+         <div class="row pad"><br /><br /></div>
          <div class="row banner"></div>
          <div class="body-contents">
             <div class="row title align-center">
@@ -78,9 +77,9 @@
                   mit dem heute wenig beachteten Barockchoral.</h3>
                <div class="button"><a href="about.html"><button class="btn btn-round">Über das Projekt</button></a></div>
             </div>
-            <hr class="hr-custom">
+            <hr class="hr-custom"></hr>
             <div class="row subcontents align-center">
-               <div class="column-left overflow-hidden"><img class="img-fluid" src="images/image01.png" alt="Illumination einer Choralhandschrift"></div>
+               <div class="column-left overflow-hidden"><img class="img-fluid" src="images/image01.png" alt="Illumination einer Choralhandschrift"></img></div>
                <div class="column-right overflow-hidden">
                   <h2>Die Quellen</h2>
                   <p class="p-cover">Die Grazer Zentralbibliothek verwahrt zahlreiche Choralquellen vom Beginn des 14.
@@ -93,8 +92,8 @@
                      <a href="toc.html"><button class="btn btn-round btn-index">Die Quellen</button></a></div>
                </div>
             </div>
-            <hr class="hr-custom">
-            <div class="subcontents align-center"><img class="img-fluid" src="images/image02.png" alt="Fragment des Titelblatts eines Choraldruckes"><div class="button overflow-hidden"><a href="listplace.html"><button class="btn btn-round btn-index">Orte</button></a>
+            <hr class="hr-custom"></hr>
+            <div class="subcontents align-center"><img class="img-fluid" src="images/image02.png" alt="Fragment des Titelblatts eines Choraldruckes"></img><div class="button overflow-hidden"><a href="listplace.html"><button class="btn btn-round btn-index">Orte</button></a>
                   &nbsp;
                   <a href="listperson.html"><button class="btn btn-round btn-index">Drucker</button></a></div>
             </div>
@@ -105,7 +104,7 @@
             <div class="col-4 col-md-5 text-center">
                <h5 class="font-weight-bold hide-mobile align-left">KONTAKT:</h5>
                <div class="row">
-                  <div class="footer-widget col-12 col-md-3 pad"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image logo acdh" alt="ACDH Logo" title="ACDH Logo"></a></div>
+                  <div class="footer-widget col-12 col-md-3 pad"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image logo acdh" alt="ACDH Logo" title="ACDH Logo"></img></a></div>
                   <div class="footer-widget col-1 col-md-7 align-left"><b class="hide-mobile">ACDH-CH</b>&nbsp;&nbsp;&nbsp;
                      
                      <p class="hide-mobile"><b>Austrian Centre for Digital Humanities and Cultural Heritage</b><br/>
@@ -120,9 +119,9 @@
             <div class="col-7 col-md-4">
                <h5 class="font-weight-bold hide-mobile align-left">FÖRDERUNG:</h5>
                <div class="row">
-                  <div class="footer-widget col-lg-8 text-center"><a href="https://www.bmkoes.gv.at/"><img src="images/BMKOES_Logo_srgb.svg" class="image logo" alt="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport" title="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport"></a></div>
+                  <div class="footer-widget col-lg-8 text-center"><a href="https://www.bmkoes.gv.at/"><img src="images/BMKOES_Logo_srgb.svg" class="image logo" alt="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport" title="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport"></img></a></div>
                   <div class="spacing"></div>
-                  <div class="footer-widget col-lg-8 text-center"><a href="https://next-generation-eu.europa.eu/index_de"><img src="images/DE_Finanziert_von_der_Europ%C3%A4ischen_Union_RG_POS.png" class="image logo" alt="Finanziert von der Europäischen Union – NextGenerationEU" title="Finanziert von der Europäischen Union – NextGenerationEU"></a></div>
+                  <div class="footer-widget col-lg-8 text-center"><a href="https://next-generation-eu.europa.eu/index_de"><img src="images/DE_Finanziert_von_der_Europ%C3%A4ischen_Union_RG_POS.png" class="image logo" alt="Finanziert von der Europäischen Union – NextGenerationEU" title="Finanziert von der Europäischen Union – NextGenerationEU"></img></a></div>
                </div>
             </div>
             <div class="col-2 hide-midi">
