deploy: edce71a1e4e591d21cd5e653ced7c909ba55bb16

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
             </div>
          </nav>
       </div>
-      <main class="flex-grow-1">
+      <main class="flex-grow">
          <div class="container-md">
             <h2 class="text-center">Über das Projekt</h2>
             <div class="container-fluid">
