--- a/listperson.html
+++ b/listperson.html
@@ -63,7 +63,7 @@
             </div>
          </nav>
       </div>
-      <main class="flex-grow-1">
+      <main class="flex-grow">
          <div class="container text-align-center">
             <h2 class="text-center">Drucker</h2>
             <div class="col-md-6 col-10 drucker center">
