--- a/search.html
+++ b/search.html
@@ -63,7 +63,7 @@
             </div>
          </nav>
       </div>
-      <main class="flex-grow-1 overflow-hidden">
+      <main class="flex-grow">
          <div class="container flex-1">
             <h2 class="text-center">Suche</h2>
          </div>
