--- a/toc.html
+++ b/toc.html
@@ -63,7 +63,7 @@
             </div>
          </nav>
       </div>
-      <main class="flex-grow-1 overflow-hidden">
+      <main class="flex-grow-1">
          <div class="container-md">
             <h2 class="text-center">Quellen</h2>
             <table class="table" id="myTable">
