--- a/books.html
+++ b/books.html
@@ -63,7 +63,7 @@
             </div>
          </nav>
       </div>
-      <main class="flex-grow-1">
+      <main class="flex-grow">
          <div class="container-md">
             <h2 class="text-center">Über die Quellen</h2>
             <div class="container-fluid">
