--- a/listplace.html
+++ b/listplace.html
@@ -63,7 +63,7 @@
             </div>
          </nav>
       </div>
-      <main class="flex-grow-1 overflow-hidden">
+      <main class="flex-grow">
          <div class="container-md">
             <h2 class="text-center">Orte</h2>
             <div id="places_div"></div>
