--- a/Pezzana.html
+++ b/Pezzana.html
@@ -65,7 +65,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container">
-            <h2 class="text-center">Giovanni Antonio Pezzana</h2>
+            <h2 class="align-center">Giovanni Antonio Pezzana</h2>
             <div class="card-body"><small>Geburtsdatum: </small>1717<br/><small>Todesdatum: </small>1779<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Venedig.html" target="_blank">Venedig</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1102696757" target="_blank">1102696757</a><br/><small>Wikidata ID: </small><a href="https://www.wikidata.org/entity/Q105889193" target="_blank">Q105889193</a><br/><hr>
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
@@ -80,7 +80,7 @@
       </main>
       <footer  class="footer">
          <div class="row justify-content-center">
-            <div class="col-4 col-md-5 text-center">
+            <div class="col-4 col-md-5 align-center">
                <h5 class="font-weight-bold hide-mobile align-left">KONTAKT:</h5>
                <div class="row">
                   <div class="footer-widget col-12 col-md-3 pad"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image logo acdh" alt="ACDH Logo" title="ACDH Logo"></a></div>
@@ -98,9 +98,9 @@
             <div class="col-7 col-md-4">
                <h5 class="font-weight-bold hide-mobile align-left">FÖRDERUNG:</h5>
                <div class="row">
-                  <div class="footer-widget col-lg-8 text-center"><a href="https://www.bmkoes.gv.at/"><img src="images/BMKOES_Logo_srgb.svg" class="image logo" alt="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport" title="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport"></a></div>
+                  <div class="footer-widget col-lg-8 align-center"><a href="https://www.bmkoes.gv.at/"><img src="images/BMKOES_Logo_srgb.svg" class="image logo" alt="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport" title="Finanziert vom Bundeministeirum für Kunst, Kultur, öffentlichen Dienst und Sport"></a></div>
                   <div class="spacing"></div>
-                  <div class="footer-widget col-lg-8 text-center"><a href="https://next-generation-eu.europa.eu/index_de"><img src="images/DE_Finanziert_von_der_Europ%C3%A4ischen_Union_RG_POS.png" class="image logo" alt="Finanziert von der Europäischen Union – NextGenerationEU" title="Finanziert von der Europäischen Union – NextGenerationEU"></a></div>
+                  <div class="footer-widget col-lg-8 align-center"><a href="https://next-generation-eu.europa.eu/index_de"><img src="images/DE_Finanziert_von_der_Europ%C3%A4ischen_Union_RG_POS.png" class="image logo" alt="Finanziert von der Europäischen Union – NextGenerationEU" title="Finanziert von der Europäischen Union – NextGenerationEU"></a></div>
                </div>
             </div>
             <div class="col-2 hide-midi">
