--- a/A67_18.html
+++ b/A67_18.html
@@ -41,29 +41,29 @@
       <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
    </head>
    <body class="d-flex flex-column">
-      <div class="hfeed site flex-grow-1" id="page">
-         <div  class="wrapper-navbar sticky-top hide-reading" id="wrapper-navbar">
-            <nav class="navbar navbar-expand-lg">
-               <div class="container-fluid"><a class="navbar-brand" href="index.html">OFM</a><button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-i18n="navbar__project"></a><ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="about.html" data-i18n="navbar__about"></a></li>
-                              <li><a class="dropdown-item" href="books.html" data-i18n="navbar__books"></a></li>
-                              <li><a class="dropdown-item" href="imprint.html" data-i18n="navbar__imprint"></a></li>
-                           </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="toc.html" data-i18n="navbar__toc"></a></li>
-                        <li class="nav-item dropdown disabled"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-i18n="navbar__register"></a><ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="listplace.html" data-i18n="navbar__places"></a></li>
-                              <li><a class="dropdown-item" href="listperson.html" data-i18n="navbar__persons"></a></li>
-                           </ul>
-                        </li>
-                        <li class="nav-item"><a title="Suche" class="nav-link" href="search.html" data-i18n="navbar__search"></a></li>
-                     </ul>
-                  </div>
+      <div  class="wrapper-navbar sticky-top hide-reading" id="wrapper-navbar">
+         <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid"><a class="navbar-brand" href="index.html">OFM</a><button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-i18n="navbar__project"></a><ul class="dropdown-menu">
+                           <li><a class="dropdown-item" href="about.html" data-i18n="navbar__about"></a></li>
+                           <li><a class="dropdown-item" href="books.html" data-i18n="navbar__books"></a></li>
+                           <li><a class="dropdown-item" href="imprint.html" data-i18n="navbar__imprint"></a></li>
+                        </ul>
+                     </li>
+                     <li class="nav-item"><a class="nav-link" href="toc.html" data-i18n="navbar__toc"></a></li>
+                     <li class="nav-item dropdown disabled"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-i18n="navbar__register"></a><ul class="dropdown-menu">
+                           <li><a class="dropdown-item" href="listplace.html" data-i18n="navbar__places"></a></li>
+                           <li><a class="dropdown-item" href="listperson.html" data-i18n="navbar__persons"></a></li>
+                        </ul>
+                     </li>
+                     <li class="nav-item"><a title="Suche" class="nav-link" href="search.html" data-i18n="navbar__search"></a></li>
+                  </ul>
                </div>
-            </nav>
-         </div>
+            </div>
+         </nav>
+      </div>
+      <main class="hfeed site flex-grow" id="page">
          <div class="edition_container ">
             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavigation" aria-labelledby="offcanvasNavigationLabel" data-bs-scroll="true" data-bs-backdrop="false">
                <div class="offcanvas-header"></div>
@@ -75,13 +75,13 @@
                   <h2 align="center">Adonai, Domine Deus magne et mirabilis</h2>
                   <div class="row" id="fa_links">
                      <div class="col-4" style="text-align:right">
-                        <h2><a href="A64_34.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h2>
+                        <h3><a href="A64_34.html"><i class="fa-solid fa-caret-left left" title="zurück"></i></a></h3>
                      </div>
                      <div class="col-4 docinfo" style="text-align:center">
                         <h3 align="center"><a href="A67_18.xml"><i class="fa-solid fa-file-code center" title="TEI/XML"></i></a></h3>
                      </div>
                      <div class="col-4" style="text-align:left">
-                        <h2><a href="S1_22.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h2>
+                        <h3><a href="S1_22.html"><i class="fa-solid fa-caret-right right" title="weiter"></i></a></h3>
                      </div>
                   </div>
                </div>
@@ -21581,7 +21581,7 @@
                </div>
             </div>
          </div>
-      </div>
+      </main>
       <footer  class="footer">
          <div class="row justify-content-center">
             <div class="col-4 col-md-5 align-center">
