deploy: d8a175ef5a924c6a516a2ebcc13299c055b408c7

--- a/MariaLankowitz.html
+++ b/MariaLankowitz.html
@@ -99,10 +99,10 @@
                      <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
-                           <li><a href="A64_34.html">A 64/34: Alleluia, felix es sacra Virgo</a></li>
-                           <li><a href="S1_22.html">S 1/22: Iube Domine benedicere</a></li>
-                           <li><a href="A64_37.html">A 64/37: Adoremus Dominum qui fecit nos</a></li>
-                           <li><a href="S1_40.html">S 1/40: O admirabile commercium</a></li>
+                           <li><a href="A64_34.html">A 64/34</a></li>
+                           <li><a href="S1_22.html">S 1/22</a></li>
+                           <li><a href="A64_37.html">A 64/37</a></li>
+                           <li><a href="S1_40.html">S 1/40</a></li>
                         </ul>
                      </td>
                   </tr>
