--- a/Mayr.html
+++ b/Mayr.html
@@ -70,11 +70,11 @@
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
                   <ul>
-                     <li><a href="S1_63.html">S 1/63: Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
-                     <li><a href="S1_70.html">S 1/70: Hymnarium sacrum</a></li>
-                     <li><a href="S1_62.html">S 1/62: Hymnarium Sacrum tam Romanum Urbani Papae VIII recognitum</a></li>
-                     <li><a href="S1_72.html">S 1/72: Psalterium</a></li>
-                     <li><a href="S1_61.html">S 1/61: Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                     <li><a href="S1_63.html">S 1/63</a></li>
+                     <li><a href="S1_70.html">S 1/70</a></li>
+                     <li><a href="S1_62.html">S 1/62</a></li>
+                     <li><a href="S1_72.html">S 1/72</a></li>
+                     <li><a href="S1_61.html">S 1/61</a></li>
                   </ul>
                </div>
             </div>
