--- a/Muenchen.html
+++ b/Muenchen.html
@@ -99,14 +99,14 @@
                      <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
-                           <li><a href="A67_19.html">A 67/19: Asperges me Domine</a></li>
-                           <li><a href="A67_17.html">A 67/17: Ad vesperas pro festo circumcisionis Domini</a></li>
-                           <li><a href="A67_23.html">A 67/23: Dum appropinquaret Dominus</a></li>
-                           <li><a href="A67_18.html">A 67/18: Adonai, Domine Deus magne et mirabilis</a></li>
-                           <li><a href="A67_20.html">A 67/20: Asperges me Domine</a></li>
-                           <li><a href="A67_27.html">A 67/27: Pro divino officio in choro</a></li>
-                           <li><a href="A67_22.html">A 67/22: Asperges me Domine</a></li>
-                           <li><a href="A67_21.html">A 67/21: Asperges me Domine</a></li>
+                           <li><a href="A67_19.html">A 67/19</a></li>
+                           <li><a href="A67_17.html">A 67/17</a></li>
+                           <li><a href="A67_23.html">A 67/23</a></li>
+                           <li><a href="A67_18.html">A 67/18</a></li>
+                           <li><a href="A67_20.html">A 67/20</a></li>
+                           <li><a href="A67_27.html">A 67/27</a></li>
+                           <li><a href="A67_22.html">A 67/22</a></li>
+                           <li><a href="A67_21.html">A 67/21</a></li>
                         </ul>
                      </td>
                   </tr>
