--- a/Pezzana.html
+++ b/Pezzana.html
@@ -70,8 +70,8 @@
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
                   <ul>
-                     <li><a href="S1_69.html">S 1/69: Antiphonarium de Sanctis Trium Ordinum Sancti Patris Francisci</a></li>
-                     <li><a href="S1_64.html">S 1/64: Psalterium romanum</a></li>
+                     <li><a href="S1_69.html">S 1/69</a></li>
+                     <li><a href="S1_64.html">S 1/64</a></li>
                   </ul>
                </div>
             </div>
