--- a/Ljubljana.html
+++ b/Ljubljana.html
@@ -99,14 +99,14 @@
                      <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
-                           <li><a href="A64_41.html">A 64/41: Rerum Deus tenax vigor</a></li>
-                           <li><a href="A64_42.html">A 64/42: Iam lucis orto sidere</a></li>
-                           <li><a href="A64_39.html">A 64/39: Asperges me Domine</a></li>
-                           <li><a href="A64_43.html">A 64/43: Domine est terra et plenitudo ejus</a></li>
-                           <li><a href="A64_37.html">A 64/37: Adoremus Dominum qui fecit nos</a></li>
-                           <li><a href="A63_51.html">A 63/51: Asperges me Domine</a></li>
-                           <li><a href="A64_40.html">A 64/40: Surrexit Dominus vere</a></li>
-                           <li><a href="A64_38.html">A 64/38: Asperges me Domine</a></li>
+                           <li><a href="A64_41.html">A 64/41</a></li>
+                           <li><a href="A64_42.html">A 64/42</a></li>
+                           <li><a href="A64_39.html">A 64/39</a></li>
+                           <li><a href="A64_43.html">A 64/43</a></li>
+                           <li><a href="A64_37.html">A 64/37</a></li>
+                           <li><a href="A63_51.html">A 63/51</a></li>
+                           <li><a href="A64_40.html">A 64/40</a></li>
+                           <li><a href="A64_38.html">A 64/38</a></li>
                         </ul>
                      </td>
                   </tr>
