--- a/Wien.html
+++ b/Wien.html
@@ -99,11 +99,11 @@
                      <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
-                           <li><a href="A70_23.html">A 70/23: Libellus Antiphonarium</a></li>
-                           <li><a href="S1_76.html">S 1/76: Ordo agendorum et cantandorum</a></li>
-                           <li><a href="S1_29.html">S 1/29: In festo Purificationis</a></li>
-                           <li><a href="S1_75.html">S 1/75: Ordo agendorum et cantandorum</a></li>
-                           <li><a href="S1_74.html">S 1/74: Ordo agendorum et cantandorum in actibus processionalibus</a></li>
+                           <li><a href="A70_23.html">A 70/23</a></li>
+                           <li><a href="S1_76.html">S 1/76</a></li>
+                           <li><a href="S1_29.html">S 1/29</a></li>
+                           <li><a href="S1_75.html">S 1/75</a></li>
+                           <li><a href="S1_74.html">S 1/74</a></li>
                         </ul>
                      </td>
                   </tr>
