--- a/listplace.html
+++ b/listplace.html
@@ -94,37 +94,37 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A67_41.html">A 67/41: Surrexit Dominus vere</a></li>
-                              <li><a href="A64_41.html">A 64/41: Rerum Deus tenax vigor</a></li>
-                              <li><a href="A67_19.html">A 67/19: Asperges me Domine</a></li>
-                              <li><a href="A67_42.html">A 67/42: Adoremus Dominum</a></li>
-                              <li><a href="A67_17.html">A 67/17: Ad vesperas pro festo circumcisionis Domini</a></li>
-                              <li><a href="S1_25.html">S 1/25: Antiphonarium de Tempore et Sanctis Pro Choro Graecensi</a></li>
-                              <li><a href="A64_42.html">A 64/42: Iam lucis orto sidere</a></li>
-                              <li><a href="S1_26.html">S 1/26: Deus meus eripe me</a></li>
-                              <li><a href="S1_18.html">S 1/18: Mittit ad virginem</a></li>
-                              <li><a href="S1_20.html">S 1/20: Dixit dominus domino meo</a></li>
-                              <li><a href="A64_39.html">A 64/39: Asperges me Domine</a></li>
-                              <li><a href="S1_45.html">S 1/45: Crucis vox hunc adloquitur</a></li>
-                              <li><a href="S1_39.html">S 1/39: Et licet sint alia multa in quibus debeamus"</a></li>
-                              <li><a href="A64_43.html">A 64/43: Domine est terra et plenitudo ejus</a></li>
-                              <li><a href="A67_23.html">A 67/23: Dum appropinquaret Dominus</a></li>
-                              <li><a href="A67_18.html">A 67/18: Adonai, Domine Deus magne et mirabilis</a></li>
-                              <li><a href="S1_28.html">S 1/28: Cum appropinquaret Dominus</a></li>
-                              <li><a href="A64_37.html">A 64/37: Adoremus Dominum qui fecit nos</a></li>
-                              <li><a href="A63_51.html">A 63/51: Asperges me Domine</a></li>
-                              <li><a href="S1_24.html">S 1/24: Pro missiones</a></li>
-                              <li><a href="A67_20.html">A 67/20: Asperges me Domine</a></li>
-                              <li><a href="S1_19.html">S 1/19: Tota pulchra</a></li>
-                              <li><a href="A64_40.html">A 64/40: Surrexit Dominus vere</a></li>
-                              <li><a href="A67_43.html">A 67/43: Christus dominus secundum ordinem Melchisedech</a></li>
-                              <li><a href="A67_27.html">A 67/27: Pro divino officio in choro</a></li>
-                              <li><a href="S1_44.html">S 1/44: Salve crux pretiosa</a></li>
-                              <li><a href="S1_30.html">S 1/30: In circumcisione Domini</a></li>
-                              <li><a href="S1_27.html">S 1/27: Media vita in morte sumus</a></li>
-                              <li><a href="A67_22.html">A 67/22: Asperges me Domine</a></li>
-                              <li><a href="A64_38.html">A 64/38: Asperges me Domine</a></li>
-                              <li><a href="A67_21.html">A 67/21: Asperges me Domine</a></li>
+                              <li><a href="A67_41.html">A 67/41</a></li>
+                              <li><a href="A64_41.html">A 64/41</a></li>
+                              <li><a href="A67_19.html">A 67/19</a></li>
+                              <li><a href="A67_42.html">A 67/42</a></li>
+                              <li><a href="A67_17.html">A 67/17</a></li>
+                              <li><a href="S1_25.html">S 1/25</a></li>
+                              <li><a href="A64_42.html">A 64/42</a></li>
+                              <li><a href="S1_26.html">S 1/26</a></li>
+                              <li><a href="S1_18.html">S 1/18</a></li>
+                              <li><a href="S1_20.html">S 1/20</a></li>
+                              <li><a href="A64_39.html">A 64/39</a></li>
+                              <li><a href="S1_45.html">S 1/45</a></li>
+                              <li><a href="S1_39.html">S 1/39</a></li>
+                              <li><a href="A64_43.html">A 64/43</a></li>
+                              <li><a href="A67_23.html">A 67/23</a></li>
+                              <li><a href="A67_18.html">A 67/18</a></li>
+                              <li><a href="S1_28.html">S 1/28</a></li>
+                              <li><a href="A64_37.html">A 64/37</a></li>
+                              <li><a href="A63_51.html">A 63/51</a></li>
+                              <li><a href="S1_24.html">S 1/24</a></li>
+                              <li><a href="A67_20.html">A 67/20</a></li>
+                              <li><a href="S1_19.html">S 1/19</a></li>
+                              <li><a href="A64_40.html">A 64/40</a></li>
+                              <li><a href="A67_43.html">A 67/43</a></li>
+                              <li><a href="A67_27.html">A 67/27</a></li>
+                              <li><a href="S1_44.html">S 1/44</a></li>
+                              <li><a href="S1_30.html">S 1/30</a></li>
+                              <li><a href="S1_27.html">S 1/27</a></li>
+                              <li><a href="A67_22.html">A 67/22</a></li>
+                              <li><a href="A64_38.html">A 64/38</a></li>
+                              <li><a href="A67_21.html">A 67/21</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -142,14 +142,14 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A64_41.html">A 64/41: Rerum Deus tenax vigor</a></li>
-                              <li><a href="A64_42.html">A 64/42: Iam lucis orto sidere</a></li>
-                              <li><a href="A64_39.html">A 64/39: Asperges me Domine</a></li>
-                              <li><a href="A64_43.html">A 64/43: Domine est terra et plenitudo ejus</a></li>
-                              <li><a href="A64_37.html">A 64/37: Adoremus Dominum qui fecit nos</a></li>
-                              <li><a href="A63_51.html">A 63/51: Asperges me Domine</a></li>
-                              <li><a href="A64_40.html">A 64/40: Surrexit Dominus vere</a></li>
-                              <li><a href="A64_38.html">A 64/38: Asperges me Domine</a></li>
+                              <li><a href="A64_41.html">A 64/41</a></li>
+                              <li><a href="A64_42.html">A 64/42</a></li>
+                              <li><a href="A64_39.html">A 64/39</a></li>
+                              <li><a href="A64_43.html">A 64/43</a></li>
+                              <li><a href="A64_37.html">A 64/37</a></li>
+                              <li><a href="A63_51.html">A 63/51</a></li>
+                              <li><a href="A64_40.html">A 64/40</a></li>
+                              <li><a href="A64_38.html">A 64/38</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -167,11 +167,11 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A70_23.html">A 70/23: Libellus Antiphonarium</a></li>
-                              <li><a href="S1_76.html">S 1/76: Ordo agendorum et cantandorum</a></li>
-                              <li><a href="S1_29.html">S 1/29: In festo Purificationis</a></li>
-                              <li><a href="S1_75.html">S 1/75: Ordo agendorum et cantandorum</a></li>
-                              <li><a href="S1_74.html">S 1/74: Ordo agendorum et cantandorum in actibus processionalibus</a></li>
+                              <li><a href="A70_23.html">A 70/23</a></li>
+                              <li><a href="S1_76.html">S 1/76</a></li>
+                              <li><a href="S1_29.html">S 1/29</a></li>
+                              <li><a href="S1_75.html">S 1/75</a></li>
+                              <li><a href="S1_74.html">S 1/74</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -189,11 +189,11 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="S1_63.html">S 1/63: Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
-                              <li><a href="S1_70.html">S 1/70: Hymnarium sacrum</a></li>
-                              <li><a href="S1_62.html">S 1/62: Hymnarium Sacrum tam Romanum Urbani Papae VIII recognitum</a></li>
-                              <li><a href="S1_72.html">S 1/72: Psalterium</a></li>
-                              <li><a href="S1_61.html">S 1/61: Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                              <li><a href="S1_63.html">S 1/63</a></li>
+                              <li><a href="S1_70.html">S 1/70</a></li>
+                              <li><a href="S1_62.html">S 1/62</a></li>
+                              <li><a href="S1_72.html">S 1/72</a></li>
+                              <li><a href="S1_61.html">S 1/61</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -211,12 +211,12 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="S1_66.html">S 1/66: Graduale Romanum</a></li>
-                              <li><a href="S1_65.html">S 1/65: Ad te levavi animam meam</a></li>
-                              <li><a href="S1_69.html">S 1/69: Antiphonarium de Sanctis Trium Ordinum Sancti Patris Francisci</a></li>
-                              <li><a href="S1_64.html">S 1/64: Psalterium romanum</a></li>
-                              <li><a href="S1_67.html">S 1/67: Antiphonarium Romanum</a></li>
-                              <li><a href="S1_68.html">S 1/68: Gradual romanum de tempore</a></li>
+                              <li><a href="S1_66.html">S 1/66</a></li>
+                              <li><a href="S1_65.html">S 1/65</a></li>
+                              <li><a href="S1_69.html">S 1/69</a></li>
+                              <li><a href="S1_64.html">S 1/64</a></li>
+                              <li><a href="S1_67.html">S 1/67</a></li>
+                              <li><a href="S1_68.html">S 1/68</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -234,10 +234,10 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A64_34.html">A 64/34: Alleluia, felix es sacra Virgo</a></li>
-                              <li><a href="S1_22.html">S 1/22: Iube Domine benedicere</a></li>
-                              <li><a href="A64_37.html">A 64/37: Adoremus Dominum qui fecit nos</a></li>
-                              <li><a href="S1_40.html">S 1/40: O admirabile commercium</a></li>
+                              <li><a href="A64_34.html">A 64/34</a></li>
+                              <li><a href="S1_22.html">S 1/22</a></li>
+                              <li><a href="A64_37.html">A 64/37</a></li>
+                              <li><a href="S1_40.html">S 1/40</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -255,14 +255,14 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A67_19.html">A 67/19: Asperges me Domine</a></li>
-                              <li><a href="A67_17.html">A 67/17: Ad vesperas pro festo circumcisionis Domini</a></li>
-                              <li><a href="A67_23.html">A 67/23: Dum appropinquaret Dominus</a></li>
-                              <li><a href="A67_18.html">A 67/18: Adonai, Domine Deus magne et mirabilis</a></li>
-                              <li><a href="A67_20.html">A 67/20: Asperges me Domine</a></li>
-                              <li><a href="A67_27.html">A 67/27: Pro divino officio in choro</a></li>
-                              <li><a href="A67_22.html">A 67/22: Asperges me Domine</a></li>
-                              <li><a href="A67_21.html">A 67/21: Asperges me Domine</a></li>
+                              <li><a href="A67_19.html">A 67/19</a></li>
+                              <li><a href="A67_17.html">A 67/17</a></li>
+                              <li><a href="A67_23.html">A 67/23</a></li>
+                              <li><a href="A67_18.html">A 67/18</a></li>
+                              <li><a href="A67_20.html">A 67/20</a></li>
+                              <li><a href="A67_27.html">A 67/27</a></li>
+                              <li><a href="A67_22.html">A 67/22</a></li>
+                              <li><a href="A67_21.html">A 67/21</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -280,8 +280,8 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A67_44.html">A 67/44: In processionibus Fraternitatis S. P. N. Francisci</a></li>
-                              <li><a href="S1_58.html">S 1/58: Antiphonarium Seraphicum</a></li>
+                              <li><a href="A67_44.html">A 67/44</a></li>
+                              <li><a href="S1_58.html">S 1/58</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -299,7 +299,7 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="S1_23.html">S 1/23: Incipit lamentatio Ieremiae prophetae</a></li>
+                              <li><a href="S1_23.html">S 1/23</a></li>
                            </ul>
                         </td>
                      </tr>
