deploy: e46085c8f87fcad1fea26ed0db5ab90c650b5b28

--- a/listperson.html
+++ b/listperson.html
@@ -68,11 +68,11 @@
             <h2 class="align-center">Drucker</h2>
             <div class="col-md-12 col-12 drucker center">
                <ul class="list">
-                  <li><a href="Voigt.html">Leopold Voigt</a>, aktiv in <a href="Wien.html" target="_blank">Wien</a></li>
-                  <li><a href="Mayr.html">Johann Baptist Mayr</a>, aktiv in <a href="Salzburg.html" target="_blank">Salzburg</a></li>
-                  <li><a href="Pezzana.html">Giovanni Antonio Pezzana</a>, aktiv in <a href="Venedig.html" target="_blank">Venedig</a></li>
-                  <li><a href="Balleoni.html">Paolo Baglioni</a>, aktiv in <a href="Venedig.html" target="_blank">Venedig</a></li>
-                  <li><a href="Ciera.html">Pietro Ciera</a>, aktiv in <a href="Venedig.html" target="_blank">Venedig</a></li>
+                  <li><a href="Voigt.html">Leopold Voigt</a>, wikte in <a href="Wien.html" target="_blank">Wien</a></li>
+                  <li><a href="Mayr.html">Johann Baptist Mayr</a>, wikte in <a href="Salzburg.html" target="_blank">Salzburg</a></li>
+                  <li><a href="Pezzana.html">Giovanni Antonio Pezzana</a>, wikte in <a href="Venedig.html" target="_blank">Venedig</a></li>
+                  <li><a href="Balleoni.html">Paolo Baglioni</a>, wikte in <a href="Venedig.html" target="_blank">Venedig</a></li>
+                  <li><a href="Ciera.html">Pietro Ciera</a>, wikte in <a href="Venedig.html" target="_blank">Venedig</a></li>
                </ul>
             </div>
          </div>
