--- a/StPoelten.html
+++ b/StPoelten.html
@@ -99,8 +99,8 @@
                      <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
-                           <li><a href="A67_44.html">A 67/44</a></li>
-                           <li><a href="S1_58.html">S 1/58</a></li>
+                           <li><a href="A67_44.html">A-Gf A 67/44</a></li>
+                           <li><a href="S1_58.html">A-Gf S 1/58</a></li>
                         </ul>
                      </td>
                   </tr>
