--- a/Venedig.html
+++ b/Venedig.html
@@ -99,12 +99,12 @@
                      <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
-                           <li><a href="S1_66.html">S 1/66</a></li>
-                           <li><a href="S1_65.html">S 1/65</a></li>
-                           <li><a href="S1_69.html">S 1/69</a></li>
-                           <li><a href="S1_64.html">S 1/64</a></li>
-                           <li><a href="S1_67.html">S 1/67</a></li>
-                           <li><a href="S1_68.html">S 1/68</a></li>
+                           <li><a href="S1_66.html">A-Gf S 1/66</a></li>
+                           <li><a href="S1_65.html">A-Gf S 1/65</a></li>
+                           <li><a href="S1_69.html">A-Gf S 1/69</a></li>
+                           <li><a href="S1_64.html">A-Gf S 1/64</a></li>
+                           <li><a href="S1_67.html">A-Gf S 1/67</a></li>
+                           <li><a href="S1_68.html">A-Gf S 1/68</a></li>
                         </ul>
                      </td>
                   </tr>
