--- a/Balleoni.html
+++ b/Balleoni.html
@@ -70,9 +70,9 @@
                <div id="mentions" align="left">
                   <legend>Verantwortlich für:</legend>
                   <ul>
-                     <li><a href="S1_65.html">S 1/65</a></li>
-                     <li><a href="S1_67.html">S 1/67</a></li>
-                     <li><a href="S1_68.html">S 1/68</a></li>
+                     <li><a href="S1_65.html">A-Gf S 1/65</a></li>
+                     <li><a href="S1_67.html">A-Gf S 1/67</a></li>
+                     <li><a href="S1_68.html">A-Gf S 1/68</a></li>
                   </ul>
                </div>
             </div>
