--- a/listperson.html
+++ b/listperson.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="Drucker">
+      <meta  name="apple-mobile-web-app-title" content="">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <meta  name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >Drucker</title>
+      <title ></title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -65,7 +65,7 @@
       </div>
       <main class="flex-grow">
          <div class="container text-align-center">
-            <h2 class="align-center">Drucker</h2>
+            <h2 class="align-center"></h2>
             <div class="col-md-12 col-12 drucker center">
                <ul class="list">
                   <li><a href="Voigt.html">Leopold Voigt</a>, wikte in <a href="Wien.html" target="_blank">Wien</a></li>
