--- a/listplace.html
+++ b/listplace.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="Orte">
+      <meta  name="apple-mobile-web-app-title" content="">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <meta  name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >Orte</title>
+      <title ></title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -65,7 +65,7 @@
       </div>
       <main class="flex-grow">
          <div class="container-md">
-            <h2 class="align-center">Orte</h2>
+            <h2 class="align-center"></h2>
             <div id="places_div"></div>
             <div class="container-fluid table overflow-scroll">
                <table class="table" id="myTable">
@@ -94,37 +94,37 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A67_41.html">A 67/41</a></li>
-                              <li><a href="A64_41.html">A 64/41</a></li>
-                              <li><a href="A67_19.html">A 67/19</a></li>
-                              <li><a href="A67_42.html">A 67/42</a></li>
-                              <li><a href="A67_17.html">A 67/17</a></li>
-                              <li><a href="S1_25.html">S 1/25</a></li>
-                              <li><a href="A64_42.html">A 64/42</a></li>
-                              <li><a href="S1_26.html">S 1/26</a></li>
-                              <li><a href="S1_18.html">S 1/18</a></li>
-                              <li><a href="S1_20.html">S 1/20</a></li>
-                              <li><a href="A64_39.html">A 64/39</a></li>
-                              <li><a href="S1_45.html">S 1/45</a></li>
-                              <li><a href="S1_39.html">S 1/39</a></li>
-                              <li><a href="A64_43.html">A 64/43</a></li>
-                              <li><a href="A67_23.html">A 67/23</a></li>
-                              <li><a href="A67_18.html">A 67/18</a></li>
-                              <li><a href="S1_28.html">S 1/28</a></li>
-                              <li><a href="A64_37.html">A 64/37</a></li>
-                              <li><a href="A63_51.html">A 63/51</a></li>
-                              <li><a href="S1_24.html">S 1/24</a></li>
-                              <li><a href="A67_20.html">A 67/20</a></li>
-                              <li><a href="S1_19.html">S 1/19</a></li>
-                              <li><a href="A64_40.html">A 64/40</a></li>
-                              <li><a href="A67_43.html">A 67/43</a></li>
-                              <li><a href="A67_27.html">A 67/27</a></li>
-                              <li><a href="S1_44.html">S 1/44</a></li>
-                              <li><a href="S1_30.html">S 1/30</a></li>
-                              <li><a href="S1_27.html">S 1/27</a></li>
-                              <li><a href="A67_22.html">A 67/22</a></li>
-                              <li><a href="A64_38.html">A 64/38</a></li>
-                              <li><a href="A67_21.html">A 67/21</a></li>
+                              <li><a href="A67_41.html">A-Gf A 67/41</a></li>
+                              <li><a href="A64_41.html">A-Gf A 64/41</a></li>
+                              <li><a href="A67_19.html">A-Gf A 67/19</a></li>
+                              <li><a href="A67_42.html">A-Gf A 67/42</a></li>
+                              <li><a href="A67_17.html">A-Gf A 67/17</a></li>
+                              <li><a href="S1_25.html">A-Gf S 1/25</a></li>
+                              <li><a href="A64_42.html">A-Gf A 64/42</a></li>
+                              <li><a href="S1_26.html">A-Gf S 1/26</a></li>
+                              <li><a href="S1_18.html">A-Gf S 1/18</a></li>
+                              <li><a href="S1_20.html">A-Gf S 1/20</a></li>
+                              <li><a href="A64_39.html">A-Gf A 64/39</a></li>
+                              <li><a href="S1_45.html">A-Gf S 1/45</a></li>
+                              <li><a href="S1_39.html">A-Gf S 1/39</a></li>
+                              <li><a href="A64_43.html">A-Gf A 64/43</a></li>
+                              <li><a href="A67_23.html">A-Gf A 67/23</a></li>
+                              <li><a href="A67_18.html">A-Gf A 67/18</a></li>
+                              <li><a href="S1_28.html">A-Gf S 1/28</a></li>
+                              <li><a href="A64_37.html">A-Gf A 64/37</a></li>
+                              <li><a href="A63_51.html">A-Gf A 63/51</a></li>
+                              <li><a href="S1_24.html">A-Gf S 1/24</a></li>
+                              <li><a href="A67_20.html">A-Gf A 67/20</a></li>
+                              <li><a href="S1_19.html">A-Gf S 1/19</a></li>
+                              <li><a href="A64_40.html">A-Gf A 64/40</a></li>
+                              <li><a href="A67_43.html">A-Gf A 67/43</a></li>
+                              <li><a href="A67_27.html">A-Gf A 67/27</a></li>
+                              <li><a href="S1_44.html">A-Gf S 1/44</a></li>
+                              <li><a href="S1_30.html">A-Gf S 1/30</a></li>
+                              <li><a href="S1_27.html">A-Gf S 1/27</a></li>
+                              <li><a href="A67_22.html">A-Gf A 67/22</a></li>
+                              <li><a href="A64_38.html">A-Gf A 64/38</a></li>
+                              <li><a href="A67_21.html">A-Gf A 67/21</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -142,14 +142,14 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A64_41.html">A 64/41</a></li>
-                              <li><a href="A64_42.html">A 64/42</a></li>
-                              <li><a href="A64_39.html">A 64/39</a></li>
-                              <li><a href="A64_43.html">A 64/43</a></li>
-                              <li><a href="A64_37.html">A 64/37</a></li>
-                              <li><a href="A63_51.html">A 63/51</a></li>
-                              <li><a href="A64_40.html">A 64/40</a></li>
-                              <li><a href="A64_38.html">A 64/38</a></li>
+                              <li><a href="A64_41.html">A-Gf A 64/41</a></li>
+                              <li><a href="A64_42.html">A-Gf A 64/42</a></li>
+                              <li><a href="A64_39.html">A-Gf A 64/39</a></li>
+                              <li><a href="A64_43.html">A-Gf A 64/43</a></li>
+                              <li><a href="A64_37.html">A-Gf A 64/37</a></li>
+                              <li><a href="A63_51.html">A-Gf A 63/51</a></li>
+                              <li><a href="A64_40.html">A-Gf A 64/40</a></li>
+                              <li><a href="A64_38.html">A-Gf A 64/38</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -167,11 +167,11 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A70_23.html">A 70/23</a></li>
-                              <li><a href="S1_76.html">S 1/76</a></li>
-                              <li><a href="S1_29.html">S 1/29</a></li>
-                              <li><a href="S1_75.html">S 1/75</a></li>
-                              <li><a href="S1_74.html">S 1/74</a></li>
+                              <li><a href="A70_23.html">A-Gf A 70/23</a></li>
+                              <li><a href="S1_76.html">A-Gf S 1/76</a></li>
+                              <li><a href="S1_29.html">A-Gf S 1/29</a></li>
+                              <li><a href="S1_75.html">A-Gf S 1/75</a></li>
+                              <li><a href="S1_74.html">A-Gf S 1/74</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -189,11 +189,11 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="S1_63.html">S 1/63</a></li>
-                              <li><a href="S1_70.html">S 1/70</a></li>
-                              <li><a href="S1_62.html">S 1/62</a></li>
-                              <li><a href="S1_72.html">S 1/72</a></li>
-                              <li><a href="S1_61.html">S 1/61</a></li>
+                              <li><a href="S1_63.html">A-Gf S 1/63</a></li>
+                              <li><a href="S1_70.html">A-Gf S 1/70</a></li>
+                              <li><a href="S1_62.html">A-Gf S 1/62</a></li>
+                              <li><a href="S1_72.html">A-Gf S 1/72</a></li>
+                              <li><a href="S1_61.html">A-Gf S 1/61</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -211,12 +211,12 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="S1_66.html">S 1/66</a></li>
-                              <li><a href="S1_65.html">S 1/65</a></li>
-                              <li><a href="S1_69.html">S 1/69</a></li>
-                              <li><a href="S1_64.html">S 1/64</a></li>
-                              <li><a href="S1_67.html">S 1/67</a></li>
-                              <li><a href="S1_68.html">S 1/68</a></li>
+                              <li><a href="S1_66.html">A-Gf S 1/66</a></li>
+                              <li><a href="S1_65.html">A-Gf S 1/65</a></li>
+                              <li><a href="S1_69.html">A-Gf S 1/69</a></li>
+                              <li><a href="S1_64.html">A-Gf S 1/64</a></li>
+                              <li><a href="S1_67.html">A-Gf S 1/67</a></li>
+                              <li><a href="S1_68.html">A-Gf S 1/68</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -234,10 +234,10 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A64_34.html">A 64/34</a></li>
-                              <li><a href="S1_22.html">S 1/22</a></li>
-                              <li><a href="A64_37.html">A 64/37</a></li>
-                              <li><a href="S1_40.html">S 1/40</a></li>
+                              <li><a href="A64_34.html">A-Gf A 64/34</a></li>
+                              <li><a href="S1_22.html">A-Gf S 1/22</a></li>
+                              <li><a href="A64_37.html">A-Gf A 64/37</a></li>
+                              <li><a href="S1_40.html">A-Gf S 1/40</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -255,14 +255,14 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A67_19.html">A 67/19</a></li>
-                              <li><a href="A67_17.html">A 67/17</a></li>
-                              <li><a href="A67_23.html">A 67/23</a></li>
-                              <li><a href="A67_18.html">A 67/18</a></li>
-                              <li><a href="A67_20.html">A 67/20</a></li>
-                              <li><a href="A67_27.html">A 67/27</a></li>
-                              <li><a href="A67_22.html">A 67/22</a></li>
-                              <li><a href="A67_21.html">A 67/21</a></li>
+                              <li><a href="A67_19.html">A-Gf A 67/19</a></li>
+                              <li><a href="A67_17.html">A-Gf A 67/17</a></li>
+                              <li><a href="A67_23.html">A-Gf A 67/23</a></li>
+                              <li><a href="A67_18.html">A-Gf A 67/18</a></li>
+                              <li><a href="A67_20.html">A-Gf A 67/20</a></li>
+                              <li><a href="A67_27.html">A-Gf A 67/27</a></li>
+                              <li><a href="A67_22.html">A-Gf A 67/22</a></li>
+                              <li><a href="A67_21.html">A-Gf A 67/21</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -280,8 +280,8 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="A67_44.html">A 67/44</a></li>
-                              <li><a href="S1_58.html">S 1/58</a></li>
+                              <li><a href="A67_44.html">A-Gf A 67/44</a></li>
+                              <li><a href="S1_58.html">A-Gf S 1/58</a></li>
                            </ul>
                         </td>
                      </tr>
@@ -299,7 +299,7 @@
                         </td>
                         <td>
                            <ul>
-                              <li><a href="S1_23.html">S 1/23</a></li>
+                              <li><a href="S1_23.html">A-Gf S 1/23</a></li>
                            </ul>
                         </td>
                      </tr>
