deploy: 3451a992cf537f4ba060197b4d9275877d7b8618

--- a/search.html
+++ b/search.html
@@ -75,6 +75,7 @@
                         <div id="stats-container"></div>
                         <div id="searchbox"></div>
                         <div id="clear-refinements"></div>
+                        <div>Verwenden Sie die Facetten unten, um die Ergebnisse zu verfeinern.</div>
                         <div id="refinement-list-liturgie"></div>
                         <div id="refinement-list-genre"></div>
                         <div id="refinement-list-place"></div>
